--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
     "scripts": {
-        "buildgram": "npx peggy --format es --output scripts/grammar/parser.js assets/grammar/gram.pegjs"
+        "buildgram": "npx peggy --format es --output scripts/grammar/parser.js assets/grammar/gramatica.pegjs"
     }
 }
